# Physical-AI-Humanoid-Robotics-Book

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FAVICON_UPDATE.md  HACKATHON_DELIVERABLES.md  HERO_SECTION_UPDATE.md  LANDING_PAGE_MODERNIZATION.md  LOGO_DESIGN.md  OPEN_SOURCE_MIGRATION.md  Procfile  RAILWAY_DOCKERFILE_FIX.md  RAILWAY_SETUP.md  README.md  docker-compose.yml  railway.json  render.yaml
.github/workflows/: backend-tests.yml  deploy.yml  frontend-build.yml
.specify/memory/: constitution.md
Ai-and-Humanoid-Robotics-Book/: docusaurus.config.ts  package-lock.json  package.json
Ai-and-Humanoid-Robotics-Book/src/components/: AuthForm.module.css  SignInForm.tsx  SignUpForm.tsx
Ai-and-Humanoid-Robotics-Book/src/hooks/: useAuth.ts
Ai-and-Humanoid-Robotics-Book/src/pages/: auth.tsx  index.tsx
backend/: .dockerignore  .env.example  .gitignore  BACKEND_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_SUMMARY.md  DEPLOY_COMMANDS.md  Dockerfile  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICKSTART.md  README.md  README_FIRST.md  README_RAILWAY.md  START_HERE_RAILWAY.md  agent.py  alembic.ini  api.py  main.py  pyproject.toml  railway.json  render.yaml  render.yml  requirements.txt  retrieving.py  start.sh  validate_phase2.py
backend/scripts/: index_chapters.py
backend/src/: __init__.py  config.py  main.py  models.py
backend/src/api/: __init__.py  middleware.py
backend/src/api/routes/: __init__.py  auth.py
backend/src/db/: __init__.py  connection.py  qdrant.py
backend/src/db/migrations/: __init__.py  env.py
backend/src/db/migrations/versions/: 001_create_initial_tables.py  __init__.py
backend/src/middleware/: logging.py  rate_limit.py
backend/src/models/: __init__.py  chapter.py  chat.py  user.py
backend/src/routers/: chat.py
backend/src/services/: __init__.py  auth_service.py  chat_pipeline_service.py  confidence_service.py  embedding_service.py  generation_service.py  retrieval_service.py  session_service.py  user_service.py
backend/src/utils/: context_manager.py  error_handler.py  response_formatter.py  slug_generator.py  validators.py
backend/tests/: conftest.py  test_chat_endpoint.py  test_confidence_scoring.py  test_e2e_qa_pipeline.py  test_e2e_selected_text.py  test_e2e_sources.py  test_embedding_service.py  test_generation_service.py  test_models.py  test_retrieval_service.py  test_selected_text.py  test_services.py  test_source_attribution.py
book-source/: .env.example  FRONTEND_BACKEND_SETUP.md  LICENSE  README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
book-source/docs/: 01_intro.md  02_ros2.md  03_gazebo.md  04_isaac.md  05_vla.md  06_capstone.md
book-source/src/components/: ChapterTOC.module.css  ChapterTOC.tsx  ChatBot.module.css  ChatBot.tsx
book-source/src/pages/: auth.module.css  index.module.css  index.tsx
book-source/src/theme/: Root.tsx
history/prompts/001-mvp-features/: 1-create-mvp-spec.spec.prompt.md  10-phase-4-backend-auth-complete.misc.prompt.md  2-commit-and-pr.misc.prompt.md  3-implementation-plan.plan.prompt.md  4-clarification-scan.misc.prompt.md  5-task-breakdown.tasks.prompt.md  6-cross-artifact-analysis.misc.prompt.md  7-phase-1-setup-complete.misc.prompt.md  (+2 more)
specs/001-mvp-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chatbot/: plan.md  spec.md  tasks.md
(+19 files in other folders)
